--- a/src/resources/css/App.css
+++ b/src/resources/css/App.css
@@ -3,7 +3,10 @@
   width: 100%;
   height: 100%;
 }
-
+.nostylelst
+{
+  list-style-type: none !important;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
